--- a/css/raw/variants/arc-dark.css
+++ b/css/raw/variants/arc-dark.css
@@ -248,7 +248,7 @@ input[disabled], input[readonly], textarea[disabled], textarea[readonly] { backg
 
 .btn.btn_outline.disabled:hover { background: #454c5c !important; color: #90939b !important; }
 
-.btn.btn_attachment { border-color: #6b6f79; }
+.btn.btn_attachment { background-color: #1d2027; border-color: #6b6f79; color: #90939b; }
 
 .btn.btn_attachment:hover, .btn.btn_attachment:focus { background-color: #2a2f39; border-color: #858991; }
 
@@ -305,6 +305,8 @@ input[disabled], input[readonly], textarea[disabled], textarea[readonly] { backg
 .c-filter_input { background: #6b6f79; }
 
 .p-share_dialog_message_input { color: #d3dae3; }
+
+.c-texty_input .ql-placeholder { color: #d3dae3; }
 
 .lazy_filter_select.disabled { background: #2a2f39; }
 
@@ -1231,6 +1233,8 @@ ts-mention { background: rgba(133, 137, 145, 0.1) !important; color: #d3dae3 !im
 
 .c-message__image_wrapper:after { border-color: transparent; }
 
+.c-message_kit__file__meta { color: #d3dae3; }
+
 .attachment_group.has_container { background: #404552; border: 1px solid #2a2f39; }
 
 .attachment_group.has_container .inline_attachment::after { background-color: #2a2f39; }
@@ -1635,6 +1639,10 @@ body > pre { background: #858991; }
 
 #threads_msgs.new_banner_is_showing::before { background: #404552; }
 
+.p-threads_footer__input .p-message_input_field, .p-threads_footer__input--legacy .p-message_input_field { background: #2a2f39; }
+
+.p-threads_footer__input .p-message_input_file_button, .p-threads_footer__input--legacy .p-message_input_file_button { background: #2a2f39; }
+
 ts-thread { background: #404552; }
 
 ts-thread .reply_input_container .inline_message_input_container form textarea { border-color: #2a2f39; color: #d3dae3; }
@@ -1670,6 +1678,8 @@ ts-thread .new_reply_indicator .blue_dot { color: #bf360c; }
 .reply_input_container .inline_message_input_container .ql-container ~ .emo_menu { color: #949494; }
 
 #file_reply_container .reply_container_info .reply_broadcast_buttons_container .reply_broadcast_label_container, #reply_container .reply_container_info .reply_broadcast_buttons_container .reply_broadcast_label_container, .reply_input_container .reply_container_info .reply_broadcast_buttons_container .reply_broadcast_label_container { color: #949494; }
+
+#file_reply_container .reply_limited, #reply_container .reply_limited, .reply_input_container .reply_limited, ts-thread .reply_input_container .reply_limited { background-color: #2a2f39; border-color: #6b6f79; color: #d3dae3; }
 
 #unread_msgs_scroller_div::after { background: transparent; }
 
@@ -2050,6 +2060,10 @@ html.no_touch a.filetype_button_web:hover .file_title { color: #d3dae3; }
 .p-file_details__name, .p-file_details__share_channel { color: #d3dae3; }
 
 .p-file_details__meta_container .c-file__action_button { color: #fff; }
+
+.c-pillow_file_container { background-color: #1d2027; }
+
+.c-pillow_file_container .c-pillow_file__swap .c-pillow_file__slide { background-color: #1d2027; }
 
 .c-pillow_file__description, .c-pillow_file__title { color: #d3dae3; }
 
