--- a/css/raw/variants/aubergine.css
+++ b/css/raw/variants/aubergine.css
@@ -248,7 +248,7 @@ input[disabled], input[readonly], textarea[disabled], textarea[readonly] { backg
 
 .btn.btn_outline.disabled:hover { background: #4a3b49 !important; color: #a3839f !important; }
 
-.btn.btn_attachment { border-color: #61485e; }
+.btn.btn_attachment { background-color: #372c36; border-color: #61485e; color: #a3839f; }
 
 .btn.btn_attachment:hover, .btn.btn_attachment:focus { background-color: #4d394b; border-color: #876484; }
 
@@ -305,6 +305,8 @@ input[disabled], input[readonly], textarea[disabled], textarea[readonly] { backg
 .c-filter_input { background: #61485e; }
 
 .p-share_dialog_message_input { color: #f0d9ed; }
+
+.c-texty_input .ql-placeholder { color: #f0d9ed; }
 
 .lazy_filter_select.disabled { background: #4d394b; }
 
@@ -1231,6 +1233,8 @@ ts-mention { background: rgba(135, 100, 132, 0.1) !important; color: #f0d9ed !im
 
 .c-message__image_wrapper:after { border-color: transparent; }
 
+.c-message_kit__file__meta { color: #f0d9ed; }
+
 .attachment_group.has_container { background: #3e313c; border: 1px solid #4d394b; }
 
 .attachment_group.has_container .inline_attachment::after { background-color: #4d394b; }
@@ -1635,6 +1639,10 @@ body > pre { background: #876484; }
 
 #threads_msgs.new_banner_is_showing::before { background: #3e313c; }
 
+.p-threads_footer__input .p-message_input_field, .p-threads_footer__input--legacy .p-message_input_field { background: #4d394b; }
+
+.p-threads_footer__input .p-message_input_file_button, .p-threads_footer__input--legacy .p-message_input_file_button { background: #4d394b; }
+
 ts-thread { background: #3e313c; }
 
 ts-thread .reply_input_container .inline_message_input_container form textarea { border-color: #4d394b; color: #f0d9ed; }
@@ -1670,6 +1678,8 @@ ts-thread .new_reply_indicator .blue_dot { color: #bf360c; }
 .reply_input_container .inline_message_input_container .ql-container ~ .emo_menu { color: #a3839f; }
 
 #file_reply_container .reply_container_info .reply_broadcast_buttons_container .reply_broadcast_label_container, #reply_container .reply_container_info .reply_broadcast_buttons_container .reply_broadcast_label_container, .reply_input_container .reply_container_info .reply_broadcast_buttons_container .reply_broadcast_label_container { color: #a3839f; }
+
+#file_reply_container .reply_limited, #reply_container .reply_limited, .reply_input_container .reply_limited, ts-thread .reply_input_container .reply_limited { background-color: #4d394b; border-color: #61485e; color: #f0d9ed; }
 
 #unread_msgs_scroller_div::after { background: transparent; }
 
@@ -2050,6 +2060,10 @@ html.no_touch a.filetype_button_web:hover .file_title { color: #f0d9ed; }
 .p-file_details__name, .p-file_details__share_channel { color: #f0d9ed; }
 
 .p-file_details__meta_container .c-file__action_button { color: #fff; }
+
+.c-pillow_file_container { background-color: #372c36; }
+
+.c-pillow_file_container .c-pillow_file__swap .c-pillow_file__slide { background-color: #372c36; }
 
 .c-pillow_file__description, .c-pillow_file__title { color: #f0d9ed; }
 
