--- a/css/raw/variants/solarized-dark.css
+++ b/css/raw/variants/solarized-dark.css
@@ -248,7 +248,7 @@ input[disabled], input[readonly], textarea[disabled], textarea[readonly] { backg
 
 .btn.btn_outline.disabled:hover { background: #002b36 !important; color: #268bd2 !important; }
 
-.btn.btn_attachment { border-color: #003340; }
+.btn.btn_attachment { background-color: #00171d; border-color: #003340; color: #268bd2; }
 
 .btn.btn_attachment:hover, .btn.btn_attachment:focus { background-color: #00232c; border-color: #003f50; }
 
@@ -305,6 +305,8 @@ input[disabled], input[readonly], textarea[disabled], textarea[readonly] { backg
 .c-filter_input { background: #003340; }
 
 .p-share_dialog_message_input { color: #a1adad; }
+
+.c-texty_input .ql-placeholder { color: #a1adad; }
 
 .lazy_filter_select.disabled { background: #00232c; }
 
@@ -1231,6 +1233,8 @@ ts-mention { background: rgba(0, 63, 80, 0.1) !important; color: #a1adad !import
 
 .c-message__image_wrapper:after { border-color: transparent; }
 
+.c-message_kit__file__meta { color: #a1adad; }
+
 .attachment_group.has_container { background: #002b36; border: 1px solid #00232c; }
 
 .attachment_group.has_container .inline_attachment::after { background-color: #00232c; }
@@ -1635,6 +1639,10 @@ body > pre { background: #003f50; }
 
 #threads_msgs.new_banner_is_showing::before { background: #002b36; }
 
+.p-threads_footer__input .p-message_input_field, .p-threads_footer__input--legacy .p-message_input_field { background: #00232c; }
+
+.p-threads_footer__input .p-message_input_file_button, .p-threads_footer__input--legacy .p-message_input_file_button { background: #00232c; }
+
 ts-thread { background: #002b36; }
 
 ts-thread .reply_input_container .inline_message_input_container form textarea { border-color: #00232c; color: #a1adad; }
@@ -1670,6 +1678,8 @@ ts-thread .new_reply_indicator .blue_dot { color: #dc322f; }
 .reply_input_container .inline_message_input_container .ql-container ~ .emo_menu { color: #2aa198; }
 
 #file_reply_container .reply_container_info .reply_broadcast_buttons_container .reply_broadcast_label_container, #reply_container .reply_container_info .reply_broadcast_buttons_container .reply_broadcast_label_container, .reply_input_container .reply_container_info .reply_broadcast_buttons_container .reply_broadcast_label_container { color: #2aa198; }
+
+#file_reply_container .reply_limited, #reply_container .reply_limited, .reply_input_container .reply_limited, ts-thread .reply_input_container .reply_limited { background-color: #00232c; border-color: #003340; color: #a1adad; }
 
 #unread_msgs_scroller_div::after { background: transparent; }
 
@@ -2050,6 +2060,10 @@ html.no_touch a.filetype_button_web:hover .file_title { color: #a1adad; }
 .p-file_details__name, .p-file_details__share_channel { color: #a1adad; }
 
 .p-file_details__meta_container .c-file__action_button { color: #fff; }
+
+.c-pillow_file_container { background-color: #00171d; }
+
+.c-pillow_file_container .c-pillow_file__swap .c-pillow_file__slide { background-color: #00171d; }
 
 .c-pillow_file__description, .c-pillow_file__title { color: #a1adad; }
 
