--- a/css/raw/variants/solarized-light.css
+++ b/css/raw/variants/solarized-light.css
@@ -248,7 +248,7 @@ input[disabled], input[readonly], textarea[disabled], textarea[readonly] { backg
 
 .btn.btn_outline.disabled:hover { background: #fdf6e3 !important; color: #268bd2 !important; }
 
-.btn.btn_attachment { border-color: #fef9ed; }
+.btn.btn_attachment { background-color: #fbeecb; border-color: #fef9ed; color: #268bd2; }
 
 .btn.btn_attachment:hover, .btn.btn_attachment:focus { background-color: #fcf3d9; border-color: #fffefb; }
 
@@ -305,6 +305,8 @@ input[disabled], input[readonly], textarea[disabled], textarea[readonly] { backg
 .c-filter_input { background: #fef9ed; }
 
 .p-share_dialog_message_input { color: #586e75; }
+
+.c-texty_input .ql-placeholder { color: #586e75; }
 
 .lazy_filter_select.disabled { background: #fcf3d9; }
 
@@ -1231,6 +1233,8 @@ ts-mention { background: rgba(255, 254, 251, 0.1) !important; color: #586e75 !im
 
 .c-message__image_wrapper:after { border-color: transparent; }
 
+.c-message_kit__file__meta { color: #586e75; }
+
 .attachment_group.has_container { background: #fdf6e3; border: 1px solid #fcf3d9; }
 
 .attachment_group.has_container .inline_attachment::after { background-color: #fcf3d9; }
@@ -1635,6 +1639,10 @@ body > pre { background: #fffefb; }
 
 #threads_msgs.new_banner_is_showing::before { background: #fdf6e3; }
 
+.p-threads_footer__input .p-message_input_field, .p-threads_footer__input--legacy .p-message_input_field { background: #fcf3d9; }
+
+.p-threads_footer__input .p-message_input_file_button, .p-threads_footer__input--legacy .p-message_input_file_button { background: #fcf3d9; }
+
 ts-thread { background: #fdf6e3; }
 
 ts-thread .reply_input_container .inline_message_input_container form textarea { border-color: #fcf3d9; color: #586e75; }
@@ -1670,6 +1678,8 @@ ts-thread .new_reply_indicator .blue_dot { color: #dc322f; }
 .reply_input_container .inline_message_input_container .ql-container ~ .emo_menu { color: #2aa198; }
 
 #file_reply_container .reply_container_info .reply_broadcast_buttons_container .reply_broadcast_label_container, #reply_container .reply_container_info .reply_broadcast_buttons_container .reply_broadcast_label_container, .reply_input_container .reply_container_info .reply_broadcast_buttons_container .reply_broadcast_label_container { color: #2aa198; }
+
+#file_reply_container .reply_limited, #reply_container .reply_limited, .reply_input_container .reply_limited, ts-thread .reply_input_container .reply_limited { background-color: #fcf3d9; border-color: #fef9ed; color: #586e75; }
 
 #unread_msgs_scroller_div::after { background: transparent; }
 
@@ -2050,6 +2060,10 @@ html.no_touch a.filetype_button_web:hover .file_title { color: #586e75; }
 .p-file_details__name, .p-file_details__share_channel { color: #586e75; }
 
 .p-file_details__meta_container .c-file__action_button { color: #fff; }
+
+.c-pillow_file_container { background-color: #fbeecb; }
+
+.c-pillow_file_container .c-pillow_file__swap .c-pillow_file__slide { background-color: #fbeecb; }
 
 .c-pillow_file__description, .c-pillow_file__title { color: #586e75; }
 
