--- a/css/variants/solarized-light.css
+++ b/css/variants/solarized-light.css
@@ -123,7 +123,7 @@
   .btn.btn_outline.btn_danger:focus, .btn.btn_outline.btn_danger:hover, .btn.btn_outline.btn_warning:focus, .btn.btn_outline.btn_warning:hover { background-color: #fdf6e3 !important; border-color: #dc322f !important; color: #dc322f !important; }
   .btn.btn_outline.disabled { background: #fdf6e3 !important; color: #268bd2 !important; }
   .btn.btn_outline.disabled:hover { background: #fdf6e3 !important; color: #268bd2 !important; }
-  .btn.btn_attachment { border-color: #fef9ed; }
+  .btn.btn_attachment { background-color: #fbeecb; border-color: #fef9ed; color: #268bd2; }
   .btn.btn_attachment:hover, .btn.btn_attachment:focus { background-color: #fcf3d9; border-color: #fffefb; }
   .btn.btn_attachment.btn_danger { border-color: #dc322f; }
   .btn.btn_attachment.btn_danger:hover, .btn.btn_attachment.btn_danger:focus { border-color: #e35d5b; }
@@ -152,6 +152,7 @@
   .c-enhanced_text_input:hover, .c-enhanced_text_input.c-enhanced_text_input--active { border-color: #fef9ed; }
   .c-filter_input { background: #fef9ed; }
   .p-share_dialog_message_input { color: #586e75; }
+  .c-texty_input .ql-placeholder { color: #586e75; }
   .lazy_filter_select.disabled { background: #fcf3d9; }
   .lazy_filter_select.disabled input.lfs_input { background: #fffefb; }
   .lazy_filter_select .lfs_input_container { background-color: #fef9ed; border-color: #fbeecb; }
@@ -616,6 +617,7 @@
   .c-message__file_meta { color: #2aa198; }
   .c-message__image_container { background: rgba(251, 238, 203, 0.1); }
   .c-message__image_wrapper:after { border-color: transparent; }
+  .c-message_kit__file__meta { color: #586e75; }
   .attachment_group.has_container { background: #fdf6e3; border: 1px solid #fcf3d9; }
   .attachment_group.has_container .inline_attachment::after { background-color: #fcf3d9; }
   .attachment_group.has_container.has_link:hover { border-bottom-color: #fcf3d9; border-left-color: #fcf3d9; border-right-color: #fcf3d9; box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15); }
@@ -818,6 +820,8 @@
   #threads_view_banner.messages_banner:hover { background: #fef9ed; }
   #threads_view_banner.messages_banner:hover .clear_unread_messages { background: #fef9ed; }
   #threads_msgs.new_banner_is_showing::before { background: #fdf6e3; }
+  .p-threads_footer__input .p-message_input_field, .p-threads_footer__input--legacy .p-message_input_field { background: #fcf3d9; }
+  .p-threads_footer__input .p-message_input_file_button, .p-threads_footer__input--legacy .p-message_input_file_button { background: #fcf3d9; }
   ts-thread { background: #fdf6e3; }
   ts-thread .reply_input_container .inline_message_input_container form textarea { border-color: #fcf3d9; color: #586e75; }
   ts-thread .reply_input_container .collapsed_input_placeholder, ts-thread .reply_input_container .join_channel_from_thread_container, ts-thread .reply_input_container .reply_limited_in_general { background: #fcf3d9; border-color: #fcf3d9; }
@@ -836,6 +840,7 @@
   .reply_input_container .inline_message_input_container .ql-container.focus ~ .emo_menu { color: #586e75; }
   .reply_input_container .inline_message_input_container .ql-container ~ .emo_menu { color: #2aa198; }
   #file_reply_container .reply_container_info .reply_broadcast_buttons_container .reply_broadcast_label_container, #reply_container .reply_container_info .reply_broadcast_buttons_container .reply_broadcast_label_container, .reply_input_container .reply_container_info .reply_broadcast_buttons_container .reply_broadcast_label_container { color: #2aa198; }
+  #file_reply_container .reply_limited, #reply_container .reply_limited, .reply_input_container .reply_limited, ts-thread .reply_input_container .reply_limited { background-color: #fcf3d9; border-color: #fef9ed; color: #586e75; }
   #unread_msgs_scroller_div::after { background: transparent; }
   #unread_msgs_scroller_div.loading { background-image: none; }
   #unread_msgs_scroller_div.loading::before { color: #2aa198; }
@@ -1026,6 +1031,8 @@
   .c-file__slide--meta { background-color: #fbeecb; }
   .p-file_details__name, .p-file_details__share_channel { color: #586e75; }
   .p-file_details__meta_container .c-file__action_button { color: #fff; }
+  .c-pillow_file_container { background-color: #fbeecb; }
+  .c-pillow_file_container .c-pillow_file__swap .c-pillow_file__slide { background-color: #fbeecb; }
   .c-pillow_file__description, .c-pillow_file__title { color: #586e75; }
   .p-file_list, .p-file_list__filters { background: #fcf3d9; }
   .p-file_list__filters { border-color: #fcf3d9; }
