--- a/scss/modules/messaging/_threads.scss
+++ b/scss/modules/messaging/_threads.scss
@@ -146,3 +146,12 @@ ts-thread .thread_participants {
     color: $color-highlight;
   }
 }
+
+#file_reply_container .reply_limited,
+#reply_container .reply_limited,
+.reply_input_container .reply_limited,
+ts-thread .reply_input_container .reply_limited {
+  background-color: $color-shade-dark;
+  border-color: $color-shade-light;
+  color: $base-font-color;
+}
